Added YAML model class, basic plugin model implementation, filesystem structure enerator, plugin operations behavior, plugin management client-side class, server-side and client-side Builder foundation classes, unit testing suite.

--- a/models/settings/fields.yaml
+++ b/models/settings/fields.yaml
@@ -4,7 +4,10 @@ fields:
         label: rainlab.builder::lang.author_name.title
         commentAbove: rainlab.builder::lang.author_name.description
 
-    namespace:
+    author_namespace:
         span: right
-        label: rainlab.builder::lang.namespace.title
-        commentAbove: rainlab.builder::lang.namespace.description
+        label: rainlab.builder::lang.author_namespace.title
+        commentAbove: rainlab.builder::lang.author_namespace.description
+        preset:
+            field: author_name
+            type: namespace
