--- a/classes/databasetablemodel/fields.yaml
+++ b/classes/databasetablemodel/fields.yaml
@@ -62,7 +62,7 @@ tabs:
                     title: rainlab.builder::lang.database.column_name_length
                     validation:
                         regex:
-                            pattern: ^[0-9]+$
+                            pattern: (^[0-9]+$)|(^[0-9]+,[0-9]+$)
                             message: rainlab.builder::lang.database.column_validation_length
                 unsigned:
                     title: rainlab.builder::lang.database.column_name_unsigned
