--- a/classes/databasetablemodel/fields.yaml
+++ b/classes/databasetablemodel/fields.yaml
@@ -7,6 +7,7 @@ fields:
         label: rainlab.builder::lang.database.field_name
         attributes:
             default-focus: 1
+            spellcheck: 'false'
 
     toolbar:
         type: partial
