Implementing Inspector container mode, in progress.

--- a/classes/modelformmodel/fields.yaml
+++ b/classes/modelformmodel/fields.yaml
@@ -21,3 +21,4 @@ secondaryTabs:
             type: RainLab\Builder\FormWidgets\FormBuilder
             stretch: true
             cssClass: layout
+            tab: rainlab.builder::lang.form.controls
