Use data registry for the column name autocompletion in the form builder. Minor fix in the localization model. Removed a reference to the Pages plugin localization string. Builder settings are now initialized from the first plugin parameters.

--- a/classes/menusmodel/fields.yaml
+++ b/classes/menusmodel/fields.yaml
@@ -13,5 +13,5 @@ secondaryTabs:
     fields:
         menus:
             stretch: true
-            tab: rainlab.pages::lang.menu.items
+            tab: rainlab.builder::lang.menu.items
             type: RainLab\Builder\FormWidgets\MenuEditor
