--- a/classes/pluginbasemodel/fields.yaml
+++ b/classes/pluginbasemodel/fields.yaml
@@ -9,12 +9,14 @@ tabs:
         name:
             span: left
             label: rainlab.builder::lang.plugin.field_name
+            required: true
             tab: rainlab.builder::lang.plugin.tab_general
 
         author:
             span: right
             label: rainlab.builder::lang.plugin.field_author
             tab: rainlab.builder::lang.plugin.tab_general
+            required: true
 
         namespace:
             context: [create]
@@ -22,6 +24,7 @@ tabs:
             label: rainlab.builder::lang.plugin.field_plugin_namespace
             commentAbove: rainlab.builder::lang.plugin.field_namespace_description
             tab: rainlab.builder::lang.plugin.tab_general
+            required: true
             preset:
                 field: name
                 type: namespace
@@ -32,6 +35,7 @@ tabs:
             label: rainlab.builder::lang.plugin.field_author_namespace
             commentAbove: rainlab.builder::lang.plugin.field_author_namespace_description
             tab: rainlab.builder::lang.plugin.tab_general
+            required: true
             preset:
                 field: author
                 type: namespace
