--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -2,3 +2,5 @@
     - Initialize plugin.
 1.0.2:
     - Fixes the problem with selecting a plugin. Minor localization corrections. Configuration files in the list and form behaviors are now autocomplete.
+1.0.3:
+    - Improved handling of the enum data type.
