--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -4,3 +4,5 @@
     - Fixes the problem with selecting a plugin. Minor localization corrections. Configuration files in the list and form behaviors are now autocomplete.
 1.0.3:
     - Improved handling of the enum data type.
+1.0.4:
+    - Added user permissions to work with the Builder.
