--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -8,3 +8,5 @@
     - Added user permissions to work with the Builder.
 1.0.5:
     - Fixed permissions registration.
+1.0.6:
+    - Fixed front-end record ordering in the Record List component.
