--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -10,3 +10,5 @@
     - Fixed permissions registration.
 1.0.6:
     - Fixed front-end record ordering in the Record List component.
+1.0.7:
+    - Builder settings are now protected with user permissions. The database table column list is scrollable now. Minor code cleanup.
