--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -9,4 +9,5 @@
 1.0.9: Minor API and UI updates.
 1.0.10: Minor styling update.
 1.0.11: Fixed a bug where clicking placeholder in a repeater would open Inspector. Fixed a problem with saving forms with repeaters in tabs. Minor style fix.
-1.0.12: Added support for the Trigger property to the Media Finder widget configuration. Names of form fields and list columns definition files can now contain underscores.1.0.13: Minor styling fix on the database editor.
+1.0.12: Added support for the Trigger property to the Media Finder widget configuration. Names of form fields and list columns definition files can now contain underscores.
+1.0.13: Minor styling fix on the database editor.
