--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -16,3 +16,4 @@
 1.0.16: Fixed a bug when saving a form with the Repeater widget in a tab could create invalid fields in the form's outside area. Added a check that prevents creating localization strings inside other existing strings.
 1.0.17: Added support Trigger attribute support for RecordFinder and Repeater form widgets.
 1.0.18: Fixes a bug where '::class' notations in a model class definition could prevent the model from appearing in the Builder model list. Added emptyOption property support to the dropdown form control.
+1.0.19: Added a feature allowing to add all database columns to a list definition. Added max length validation for database table and column names.
