--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,8 @@
         "php": ">=7.0",
         "composer/installers": "~1.0"
     },
+    "require-dev": {
+      "phpunit/phpunit": "~4.0"
+    },
     "minimum-stability": "dev"
 }
