--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -20,3 +20,4 @@
 1.0.20: Fixes a bug where form the builder could trigger the "current.hasAttribute is not a function" error.
 1.0.21: Back-end navigation sort order updated.
 1.0.22: Added scopeValue property to the RecordList component.
+1.0.23: Added support for passing properties between components with the scopeValue property of Record list and the identifierValue property of Record details.
