--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -23,4 +23,4 @@
 1.0.23: Added support for balloon-selector field type, added Brazilian Portuguese translation, fixed some bugs
 1.0.24: Added support for tag list field type, added read only toggle for fields. Prevent plugins from using reserved PHP keywords for class names and namespaces
 1.0.25: Allow editing of migration code in the "Migration" popup when saving changes in the database editor.
-1.0.26: Created Dynamic Height field, select stretch or the new grow feature.
+1.0.26: Added 3 and 4 column option for form fields and dynamic height field, which lets you select stretch or the new grow feature.
