--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ cache:
 
 install:
   - git clone https://github.com/octobercms/october.git
+  - git checkout develop
   - mkdir -p ./october/plugins/rainlab/builder
   - mv !(october) october/plugins/rainlab/builder
   - cd october
