--- a/.travis.yml
+++ b/.travis.yml
@@ -21,10 +21,11 @@ cache:
 
 install:
   - wget https://github.com/octobercms/october/archive/develop.zip
-  - unzip develop.zip
+  - unzip develop.zip && rm develop.zip
   - mv october-develop october
   - mkdir -p ./october/plugins/rainlab/builder
   - mv !(october) october/plugins/rainlab/builder
+  - mv .travis.yml october/plugins/rainlab/builder
   - cd october
   - composer install --no-interaction --no-progress --no-suggest
   - cp config/cms.php config/testing/cms.php
