--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -24,3 +24,4 @@
 1.0.24: Added support for tag list field type, added read only toggle for fields. Prevent plugins from using reserved PHP keywords for class names and namespaces
 1.0.25: Allow editing of migration code in the "Migration" popup when saving changes in the database editor.
 1.0.26: Allow special default values for columns and added new "Add ID column" button to database editor.
+1.0.27: Update checkbox display to give a better user experience.
