--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     ],
     "require": {
         "php": ">=7.0",
-        "composer/installers": "~1.0"
+        "composer/installers": "~1.0",
+        "marktopper/doctrine-dbal-timestamp-type": "^1.0.2"
     },
     "require-dev": {
       "phpunit/phpunit": "~4.0"
