Back-end styling clean-up

--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -28,3 +28,4 @@
 1.0.28: Fixes support for PHP 8
 1.0.29: Disable touch device detection
 1.0.30: Minor styling improvements
+1.0.31: Minor styling improvements
