Back-end styling clean-up (#358)

--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -29,3 +29,4 @@
 1.0.29: Disable touch device detection
 1.0.30: Minor styling improvements
 1.0.31: Added support for more rich editor and file upload properties
+1.0.32: Minor styling improvements
