--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -35,3 +35,4 @@ v1.1.1: Adds DBAL timestamp column type. Adds database prefix support. Fixes var
 v1.1.2: Compatibility with October CMS v2.2
 v1.1.3: Adds comment support to database tables.
 v1.1.4: Fixes duplication bug saving backend menu permissions.
+v1.2.0: Improve support with October v3.0
