--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -38,3 +38,4 @@ v1.1.4: Fixes duplication bug saving backend menu permissions.
 v1.2.0: Improve support with October v3.0
 v1.2.2: Compatibility updates.
 v1.2.3: Fixes issue when removing items from permissions and menus.
+v1.2.4: Fixes validator conflict with other plugins.
