--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -39,3 +39,4 @@ v1.2.0: Improve support with October v3.0
 v1.2.2: Compatibility updates.
 v1.2.3: Fixes issue when removing items from permissions and menus.
 v1.2.5: Fixes validator conflict with other plugins.
+v1.2.6: Compatibility with October v3.1
