Include related blueprints when importing

--- a/models/importsmodel/fields_select.yaml
+++ b/models/importsmodel/fields_select.yaml
@@ -4,4 +4,11 @@
 
 fields:
     blueprint_uuid:
+        label: Blueprint Handle
         type: dropdown
+
+    include_related:
+        type: checkbox
+        label: Include Related Blueprints
+        comment: Scan the selected blueprint for any related blueprints and include them in the selection.
+        default: true
