Use checkbox list to select blueprints

--- a/models/importsmodel/fields_select.yaml
+++ b/models/importsmodel/fields_select.yaml
@@ -5,7 +5,7 @@
 fields:
     blueprint_uuid:
         label: Blueprint Handle
-        type: dropdown
+        type: checkboxlist
 
     include_related:
         type: checkbox
