--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         }
     ],
     "require": {
-        "php": ">=7.0",
+        "php": "^8.0.2",
+        "october/rain": ">=3.0",
         "composer/installers": "~1.0"
     },
     "require-dev": {
