--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -41,3 +41,4 @@ v1.2.3: Fixes issue when removing items from permissions and menus.
 v1.2.5: Fixes validator conflict with other plugins.
 v1.2.6: Compatibility with October v3.1
 v2.0.1: Adds Tailor blueprint importer and code editor.
+v2.0.2: Fixes visual bug when tab fields overflow.
