--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -45,3 +45,4 @@ v2.0.2: Fixes visual bug when tab fields overflow.
 v2.0.3: Fixes missing import in CMS components.
 v2.0.4: Fixes bad method name in controller model.
 v2.0.5: Fixes bug adding data table controls.
+v2.0.6: Fixes importing Tailor multisite globals.
